<resources>
    <string name="app_name">FirebaseTest</string>
    <string name="main">main</string>
    <string name="login">login</string>
    <string name="button">Button</string>
    <string name="add_user">ユーザの追加</string>
    <string name="user_name">User name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="year_of_birth">Year of birth</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="refresh_list">refresh list</string>
    <string name="delete">Delete</string>
    <string name="ask_delete">Delete this user?</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="logout_button">logout button</string>
</resources>