<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layout_input"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/first_name"
                    android:hint="@string/first_name"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/last_name"
                    android:hint="@string/last_name"
                    android:inputType="text" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_of_birth" />

        <EditText
            android:id="@+id/et_born"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="32dp"
            android:autofillHints="@string/year_of_birth"
            android:hint="@string/year_of_birth"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_input"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/textButton"
            android:text="@string/cancel"/>

        <TextView
            android:id="@+id/tv_ok"
            style="@style/textButton"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/ok"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>